--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Home - House Pin</title>
 </head>
 <body>
-$END$
+    <h1>Home works!!!</h1>
+    <h2 th:text="${username}">::</h2>
 </body>
 </html>
