--- a/src/main/resources/templates/anuncio/cadastro.html
+++ b/src/main/resources/templates/anuncio/cadastro.html
@@ -30,7 +30,7 @@
 
     <div class="row">
         <div class="col-xl-9 mb-4">
-            <form th:action="@{/anuncio/cadastro}" th:object="${anuncio}" method="post">
+            <form th:action="@{anuncio/cadastro}" th:object="${anuncio}" method="post">
                 <div class="form-row">
                     <div class="form-group col-md-3">
                         <label for="campo_cep">CEP</label>
