--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="head">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -31,9 +31,9 @@
             </div>
             <div class="justify-content-end">
 
-                <!-- USUÁRIO DESLOGADO
+                <!-- USUÁRIO DESLOGADO -->
 
-                <button type="button" class="btn font-weight-bold hp-font-size-14 text-secondary mr-0 bg-white hp-hover-text-entrar hp-color-gray" data-toggle="modal" data-target="#exampleModalCenter">ENTRAR</button>
+                <a th:href="@{/login}" class="btn font-weight-bold hp-font-size-14 text-secondary mr-0 bg-white hp-hover-text-entrar hp-color-gray" role="button" aria-pressed="true">ENTRAR</a>
 
                 <a th:href="@{/anuncio/cadastro}" class="btn font-weight-bold hp-font-size-14 hp-round-button hp-border-light-gray pl-3 pr-3 bg-white hp-color-red hp-hover-button-anunciar" role="button" aria-pressed="true">ANUNCIAR</a>
 
@@ -71,8 +71,43 @@
                 </div>
                 <!-- END USUÁRIO DESLOGADO -->
 
-                <div class="btn-group">
-                    <a type="button" class="btn font-weight-bold hp-font-size-14 text-secondary mr-0 bg-white hp-hover-text-entrar hp-color-gray hp-usuario-logado-opcoes" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">RODRIGO GOLFETO</a>
+                <!--<div class="btn-group border-0">-->
+                    <!--<a type="button" class="btn font-weight-bold hp-font-size-14 text-secondary mr-0 bg-white hp-hover-text-entrar hp-color-gray hp-usuario-logado-opcoes" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">RODRIGO GOLFETO</a>-->
+                    <!--<div class="dropdown-menu dropdown-menu-right">-->
+                        <!--<button class="dropdown-item" type="button">Meu Perfil</button>-->
+                        <!--<button class="dropdown-item" type="button">Meus Anúncios</button>-->
+                        <!--<button class="dropdown-item" type="button">Sair da Conta</button>-->
+                    <!--</div>-->
+                <!--</div>-->
+
+            </div>
+        </div>
+    </nav>
+</header>
+<header th:fragment="header-usuario-logado">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex justify-content-end hp-h-100">
+        <div class="container">
+            <a href="#" class="mr-4"><img src="/images/logo.svg" alt="House Pin - Sua referência em imóveis"/></a>
+            <button class="navbar-toggler border-white" type="button" data-toggle="collapse" data-target="#menu"
+                    aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse navbar-toggler-lg bg-white text-lg-right pl-4 border-left" id="menu">
+                <ul class="navbar-nav font-weight-bold">
+                    <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="novidades.html">NOVIDADES</a>
+                    </li>
+                    <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="promocoes.html">PROMOÇÕES</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link hp-font-size-14 hp-color-gray"
+                                            href="duvidas-frequentes.html">DÚVIDAS FREQUENTES</a></li>
+                </ul>
+            </div>
+            <div class="justify-content-end">
+
+                <div class="btn-group border-0">
+                    <a type="button"
+                       class="btn font-weight-bold hp-font-size-14 text-secondary mr-0 bg-white hp-hover-text-entrar hp-color-gray hp-usuario-logado-opcoes"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span sec:authentication="principal.username"></span></a>
                     <div class="dropdown-menu dropdown-menu-right">
                         <button class="dropdown-item" type="button">Meu Perfil</button>
                         <button class="dropdown-item" type="button">Meus Anúncios</button>
