--- a/src/main/resources/templates/usuario/cadastro.html
+++ b/src/main/resources/templates/usuario/cadastro.html
@@ -1,73 +1,8 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/css.css}" href="/css/css.css" type="text/css"/>
-
-    <title>House Pin - Sua referência em imóveis</title>
-</head>
+<div th:replace="fragments/header :: head">&nbsp;</div>
 <body class="hp-background-gray">
-
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex justify-content-end hp-h-100">
-        <div class="container">
-            <a href="#" class="mr-4"><img src="/images/logo.svg" alt="House Pin - Sua referência em imóveis"/></a>
-            <button class="navbar-toggler border-white" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse navbar-toggler-lg bg-white text-lg-right pl-4 border-left" id="menu">
-                <ul class="navbar-nav font-weight-bold">
-                    <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="novidades.html">NOVIDADES</a></li>
-                    <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="promocoes.html">PROMOÇÕES</a></li>
-                    <li class="nav-item"><a class="nav-link hp-font-size-14 hp-color-gray" href="duvidas-frequentes.html">DÚVIDAS FREQUENTES</a></li>
-                </ul>
-            </div>
-            <div class="justify-content-end">
-                <button type="button" class="btn font-weight-bold hp-font-size-14 text-secondary mr-0 bg-white hp-hover-text-entrar hp-color-gray" data-toggle="modal" data-target="#exampleModalCenter">ENTRAR</button>
-                <a href="cadastro.html" class="btn font-weight-bold hp-font-size-14 hp-round-button hp-border-light-gray pl-3 pr-3 bg-white hp-color-red hp-hover-button-anunciar" role="button" aria-pressed="true">ANUNCIAR</a>
-
-
-                <!-- Modal -->
-                <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header border-bottom-0">
-                                <h5 class="modal-title" id="exampleModalCenterTitle">Entrar</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body pt-0">
-                                <form>
-                                    <div class="form-group mb-2">
-                                        <label for="exampleInputEmail1" class="mb-0 hp-font-size-14 hp-color-light-gray">E-mail</label>
-                                        <input type="email" class="form-control hp-font-size-14" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Informe seu E-mail">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputPassword1" class="mb-0 hp-font-size-14 hp-color-light-gray">Senha</label>
-                                        <input type="password" class="form-control hp-font-size-14" id="exampleInputPassword1" placeholder="Informe sua Senha">
-                                    </div>
-                                    <div class="text-center">
-                                        <button type="submit" class="btn btn-primary">Acessar</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-        </div>
-    </nav>
-</header>
-
+<div th:replace="fragments/header :: (${user != null} ? header-usuario-logado : header-sem-usuario)">&nbsp;</div>
 <div class="hp-search-interno">
     <div class="container">
         <div class="hp-base-formulario mx-auto">
@@ -93,7 +28,7 @@
 
     <div class="row">
         <div class="col-xl-6 mb-4">
-            <form th:action="@{/anuncio/cadastro}" th:object="${anuncio}" method="post">
+            <form th:action="@{/usuario/cadastro}" th:object="${anunciante}" method="post">
                 <div class="mb-3">
                     <div class="custom-control custom-radio custom-control-inline">
                         <input type="radio" id="campo_pessoa_fisica" name="campo_pessoa" class="custom-control-input" checked="checked">
@@ -107,73 +42,99 @@
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="campo_nome_completo">Nome Completo</label>
-                        <input type="email" class="form-control" id="campo_nome_completo" placeholder="Nome Completo">
+                        <input type="text" class="form-control" id="campo_nome_completo" placeholder="Nome Completo" th:field="*{nome}">
                     </div>
                     <div class="form-group col-md-12">
                         <label for="campo_creci">CRECI</label>
-                        <input type="password" class="form-control" id="campo_creci" placeholder="CRECI">
+                        <input type="text" class="form-control" id="campo_creci" placeholder="CRECI" th:field="*{creci}">
                     </div>
                 </div>
                 <div class="form-row hp-grupo-pessoa-fisica d-none">
                     <div class="form-group col-md-4">
                         <label for="campo_cnpj">CNPJ</label>
-                        <input type="email" class="form-control" id="campo_cnpj" placeholder="CNPJ">
+                        <input type="text" class="form-control" id="campo_cnpj" placeholder="CNPJ" th:field="*{cnpj}">
                     </div>
                     <div class="form-group col-md-8">
                         <label for="campo_razao_social">Razão Social</label>
-                        <input type="email" class="form-control" id="campo_razao_social" placeholder="Razão Social">
+                        <input type="text" class="form-control" id="campo_razao_social" placeholder="Razão Social" th:field="*{razaoSocial}">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="campo_cpf">CPF</label>
-                        <input type="password" class="form-control" id="campo_cpf" placeholder="CPF">
+                        <input type="text" class="form-control" id="campo_cpf" placeholder="CPF" th:field="*{cpf}">
                     </div>
                     <div class="form-group col-md-6">
                         <label for="campo_telefone">Telefone</label>
-                        <input type="password" class="form-control" id="campo_telefone" placeholder="Telefone">
+                        <input type="text" class="form-control" id="campo_telefone" placeholder="Telefone" th:field="*{telefone}">
                     </div>
                 </div>
 
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="campo_email">E-mail</label>
-                        <input type="email" class="form-control" id="campo_email" placeholder="E-mail">
+                        <input type="email" class="form-control" id="campo_email" placeholder="E-mail" th:field="*{email}">
                     </div>
                     <div class="form-group col-md-6">
                         <label for="campo_senha">Senha</label>
-                        <input type="password" class="form-control" id="campo_senha" placeholder="Senha">
+                        <input type="password" class="form-control" id="campo_senha" placeholder="Senha" th:field="*{senha}">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-3">
                         <label for="campo_cep">CEP</label>
-                        <input type="text" class="form-control" id="campo_cep" placeholder="CEP">
+                        <input type="text" class="form-control" id="campo_cep" placeholder="CEP" th:field="*{endereco.cep}">
                     </div>
                     <div class="form-group col-md-5">
                         <label for="campo_cidade">Cidade</label>
-                        <input type="text" class="form-control" id="campo_cidade" placeholder="Cidade">
+                        <input type="text" class="form-control" id="campo_cidade" placeholder="Cidade" th:field="*{endereco.cidade}">
                     </div>
                     <div class="form-group col-md-4">
                         <label for="campo_estado">Estado</label>
-                        <select id="campo_estado" class="form-control">
-                            <option selected>Selecione</option>
-                            <option>...</option>
+                        <select id="campo_estado" class="form-control" th:field="*{endereco.uf}">
+                            <option value="" selected>Selecione</option>
+                            <option value="AC">Acre</option>
+                            <option value="AL">Alagoas</option>
+                            <option value="AP">Amapá</option>
+                            <option value="AM">Amazonas</option>
+                            <option value="BA">Bahia</option>
+                            <option value="CE">Ceará</option>
+                            <option value="DF">Distrito Federal</option>
+                            <option value="ES">Espírito Santo</option>
+                            <option value="GO">Goiás</option>
+                            <option value="MA">Maranhão</option>
+                            <option value="MT">Mato Grosso</option>
+                            <option value="MS">Mato Grosso do Sul</option>
+                            <option value="MG">Minas Gerais</option>
+                            <option value="PA">Pará</option>
+                            <option value="PB">Paraíba</option>
+                            <option value="PR">Paraná</option>
+                            <option value="PE">Pernambuco</option>
+                            <option value="PI">Piauí</option>
+                            <option value="RJ">Rio de Janeiro</option>
+                            <option value="RN">Rio Grande do Norte</option>
+                            <option value="RS">Rio Grande do Sul</option>
+                            <option value="RO">Rondônia</option>
+                            <option value="RR">Roraima</option>
+                            <option value="SC">Santa Catarina</option>
+                            <option value="SP">São Paulo</option>
+                            <option value="SE">Sergipe</option>
+                            <option value="TO">Tocantins</option>
                         </select>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-4">
                         <label for="campo_bairro">Bairro</label>
-                        <input type="text" class="form-control" id="campo_bairro" placeholder="Bairro">
+                        <input type="text" class="form-control" id="campo_bairro" placeholder="Bairro" th:field="*{endereco.bairro}">
                     </div>
                     <div class="form-group col-md-5">
                         <label for="campo_rua">Rua</label>
-                        <input type="text" class="form-control" id="campo_rua" placeholder="Rua">
+                        <input type="text" class="form-control" id="campo_rua" placeholder="Rua" th:field="*{endereco.logradouro}">
                     </div>
                     <div class="form-group col-md-3">
                         <label for="campo_numero">Número</label>
-                        <input type="text" class="form-control" id="campo_numero" placeholder="Número">
+                        <input type="text" class="form-control" id="campo_numero" placeholder="Número" th:field="*{endereco.numeroEndereco}">
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary mt-4">Cadastrar</button>
