--- a/src/main/resources/templates/usuario/cadastro.html
+++ b/src/main/resources/templates/usuario/cadastro.html
@@ -1,8 +1,13 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <div th:replace="fragments/header :: head">&nbsp;</div>
 <body class="hp-background-gray">
-<div th:replace="fragments/header :: (${user != null} ? header-usuario-logado : header-sem-usuario)">&nbsp;</div>
+<div sec:authorize="isAuthenticated()">
+    <div th:replace="fragments/header :: header-usuario-logado">&nbsp;</div>
+</div>
+<div sec:authorize="!isAuthenticated()">
+    <div th:replace="fragments/header :: header-sem-usuario">&nbsp;</div>
+</div>
 <div class="hp-search-interno">
     <div class="container">
         <div class="hp-base-formulario mx-auto">
@@ -134,7 +139,7 @@
                     </div>
                     <div class="form-group col-md-3">
                         <label for="campo_numero">Número</label>
-                        <input type="text" class="form-control" id="campo_numero" placeholder="Número" th:field="*{endereco.numeroEndereco}">
+                        <input type="text" class="form-control" id="campo_numero" placeholder="Número" th:field="*{endereco.numero}">
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary mt-4">Cadastrar</button>
@@ -143,30 +148,9 @@
     </div>
 </div>
 
-<footer class="page-footer hp-background-red text-white pt-4 pb-4 mt-4">
-    <div class="container">
-        <div class="row">
-            <div class="col text-left hp-font-size-14 font-weight-bold">Copyright © 2018, House Pin. Todos os direitos
-                reservados.
-            </div>
-            <div class="col text-right hp-font-size-14 font-weight-bold"><a href="" class="text-white">TERMOS DE USO</a><a
-                    href="" class="text-white ml-4">POLÍTICA DE PRIVACIDADE</a></div>
-        </div>
-    </div>
-</footer>
-
+<div th:replace="fragments/footer :: footer">&nbsp;</div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
-<script src="/javascript/scripts.js"></script>
+<div th:replace="fragments/scripts :: scripts">&nbsp;</div>
 </body>
 </html>
