--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -35,7 +35,7 @@
 
                 <a th:href="@{/login}" class="btn font-weight-bold hp-font-size-14 text-secondary mr-0 bg-white hp-hover-text-entrar hp-color-gray" role="button" aria-pressed="true">ENTRAR</a>
 
-                <a th:href="@{/anuncio/cadastro}" class="btn font-weight-bold hp-font-size-14 hp-round-button hp-border-light-gray pl-3 pr-3 bg-white hp-color-red hp-hover-button-anunciar" role="button" aria-pressed="true">ANUNCIAR</a>
+                <a th:href="@{/anuncio/cadastro(id=0)}" class="btn font-weight-bold hp-font-size-14 hp-round-button hp-border-light-gray pl-3 pr-3 bg-white hp-color-red hp-hover-button-anunciar" role="button" aria-pressed="true">ANUNCIAR</a>
 
                 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
                      aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -109,9 +109,10 @@
                        class="btn font-weight-bold hp-font-size-14 text-secondary mr-0 bg-white hp-hover-text-entrar hp-color-gray hp-usuario-logado-opcoes"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span sec:authentication="principal.username"></span></a>
                     <div class="dropdown-menu dropdown-menu-right">
+                        <a th:href="@{/anuncio/cadastro(id=0)}"><button class="dropdown-item" type="button">Anunciar</button></a>
                         <button class="dropdown-item" type="button">Meu Perfil</button>
                         <button class="dropdown-item" type="button">Meus Anúncios</button>
-                        <button class="dropdown-item" type="button">Sair da Conta</button>
+                        <a th:href="@{/logout}"><button class="dropdown-item" type="button">Sair da Conta</button></a>
                     </div>
                 </div>
 
