--- a/src/main/resources/templates/usuario/cadastro.html
+++ b/src/main/resources/templates/usuario/cadastro.html
@@ -32,7 +32,22 @@
     <h6 class="font-weight-bold mb-4">Cadastro</h6>
 
     <div class="row">
-        <div class="col-xl-6 mb-4">
+        <div class="col-xl-12 mb-4">
+
+            <div class="alert alert-danger mt-0 mb-3 alert-dismissible fade show" role="alert" th:if="${errorMessage!=null}">
+                <span th:text="${errorMessage}"></span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div class="alert alert-success mt-0 mb-3 alert-dismissible fade show" role="alert" th:if="${successMessage!=null}">
+                <span th:text="${successMessage}"></span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
             <form th:action="@{/usuario/cadastro}" th:object="${anunciante}" method="post">
                 <div class="mb-3">
                     <div class="custom-control custom-radio custom-control-inline">
@@ -45,56 +60,54 @@
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-md-12">
+                    <div class="form-group col-md-4">
                         <label for="campo_nome_completo">Nome Completo</label>
                         <input type="text" class="form-control" id="campo_nome_completo" placeholder="Nome Completo" th:field="*{nome}">
                     </div>
-                    <div class="form-group col-md-12">
+                    <div class="form-group col-md-3">
                         <label for="campo_creci">CRECI</label>
                         <input type="text" class="form-control" id="campo_creci" placeholder="CRECI" th:field="*{creci}">
                     </div>
                 </div>
                 <div class="form-row hp-grupo-pessoa-fisica d-none">
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-2">
                         <label for="campo_cnpj">CNPJ</label>
-                        <input type="text" class="form-control" id="campo_cnpj" placeholder="CNPJ" th:field="*{cnpj}">
+                        <input type="text" class="form-control cnpj" id="campo_cnpj" placeholder="CNPJ" th:field="*{cnpj}">
                     </div>
-                    <div class="form-group col-md-8">
+                    <div class="form-group col-md-3">
                         <label for="campo_razao_social">Razão Social</label>
                         <input type="text" class="form-control" id="campo_razao_social" placeholder="Razão Social" th:field="*{razaoSocial}">
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-3">
                         <label for="campo_cpf">CPF</label>
-                        <input type="text" class="form-control" id="campo_cpf" placeholder="CPF" th:field="*{cpf}">
+                        <input type="text" class="form-control cpf" id="campo_cpf" placeholder="CPF" th:field="*{cpf}">
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-3">
                         <label for="campo_telefone">Telefone</label>
-                        <input type="text" class="form-control" id="campo_telefone" placeholder="Telefone" th:field="*{telefone}">
+                        <input type="text" class="form-control telefone" id="campo_telefone" placeholder="Telefone" th:field="*{telefone}">
                     </div>
-                </div>
 
-                <div class="form-row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-3">
                         <label for="campo_email">E-mail</label>
                         <input type="email" class="form-control" id="campo_email" placeholder="E-mail" th:field="*{email}">
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-3">
                         <label for="campo_senha">Senha</label>
                         <input type="password" class="form-control" id="campo_senha" placeholder="Senha" th:field="*{senha}">
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-md-3">
+                    <div class="form-group col-md-2">
                         <label for="campo_cep">CEP</label>
-                        <input type="text" class="form-control" id="campo_cep" placeholder="CEP" th:field="*{endereco.cep}">
+                        <input type="text" class="form-control cep" id="campo_cep" placeholder="CEP" th:field="*{endereco.cep}">
                     </div>
-                    <div class="form-group col-md-5">
+                    <div class="form-group col-md-2">
                         <label for="campo_cidade">Cidade</label>
                         <input type="text" class="form-control" id="campo_cidade" placeholder="Cidade" th:field="*{endereco.cidade}">
                     </div>
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-3">
                         <label for="campo_estado">Estado</label>
                         <select id="campo_estado" class="form-control" th:field="*{endereco.uf}">
                             <option value="" selected>Selecione</option>
@@ -127,22 +140,20 @@
                             <option value="TO">Tocantins</option>
                         </select>
                     </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-2">
                         <label for="campo_bairro">Bairro</label>
                         <input type="text" class="form-control" id="campo_bairro" placeholder="Bairro" th:field="*{endereco.bairro}">
                     </div>
-                    <div class="form-group col-md-5">
+                    <div class="form-group col-md-2">
                         <label for="campo_rua">Rua</label>
                         <input type="text" class="form-control" id="campo_rua" placeholder="Rua" th:field="*{endereco.logradouro}">
                     </div>
-                    <div class="form-group col-md-3">
+                    <div class="form-group col-md-1">
                         <label for="campo_numero">Número</label>
                         <input type="text" class="form-control" id="campo_numero" placeholder="Número" th:field="*{endereco.numero}">
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary mt-4">Cadastrar</button>
+                <button type="submit" class="btn btn-primary hp-round-button pl-5 pr-5">Cadastrar</button>
             </form>
         </div>
     </div>
