Início da página de detalhes do anúncio

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -71,7 +71,7 @@
                     <div class="card-body p-0">
                         <!--<span class="hp-font-size-12 hp-color-partial-gray font-weight-bold"-->
                         <!--th:text="${anuncio.getTipoImovel().getNome()}"></span>-->
-                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20"><span
+                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20 mt-2 text-dark"><span
                                 th:text="${anuncio.getEndereco().getBairro()}"></span><br><span
                                 th:text="${anuncio.getEndereco().getCidade()}"></span>
                             - <span th:text="${anuncio.getEndereco().getUf()}"></span>
